Update (2nd day)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Stage: 0 -->
         <div id="menu-header">Ellon</div>
         <div id="saves">
-            <input id="new-save">
+            <input id="new-save" placeholder="New save">
         </div>
         <!-- Stage: 1 -->
         <div id="map"></div> 
