--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="wrapper s0">
+    <div class="wrapper s0 bg-default">
         <div class="header">Ellon</div>
         <!-- Stage: 0 -->
         <div id="menu-header">Ellon</div>
