Update (4th day)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div id="end-message">The end.</div>
     </div>
 
+    <script src="js/utils.js"></script>
+    <script src="js/Enchantements.js"></script>
+    <script src="js/Items.js"></script>
     <script src="js/Player.js"></script>
     <script src="js/Map.js"></script>
     <script src="js/Game.js"></script>
