Update (6th day)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     
     <div class="wrapper s0 bg-default">
+        <!-- utils -->
+        <span><</span>
         <div class="header">Ellon</div>
         <!-- Stage: 0 -->
         <div id="menu-header">Ellon</div>
@@ -23,6 +25,11 @@
         <div id="input"></div>
         <!-- Stage: 2 -->
         <div id="end-message">The end.</div>
+        <!-- Stage: 3 -->
+        <div id="backpack"></div>
+        <div id="slots"></div>
+        <div id="item-info"></div>
+        <div id="player-info"></div>
     </div>
 
     <script src="js/utils.js"></script>
